--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                       
                     </a>
                     <a data-lag=".015" href="/resume-of-shuvo.pdf" download="" target="_blank" class="link-btn magnetic">
-                      <span class="text">Downdload Resume</span>
+                      <span class="text">Download Resume</span>
                       <svg class="icon"  width="167" height="167" viewBox="0 0 167 167" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M131.584 37.9976L37.6783 131.903" stroke="black" stroke-width="12"/>
                         <path d="M58.7941 36.4067L131.915 38.3282L130.468 108.081" stroke="black" stroke-width="12"/>
@@ -205,7 +205,7 @@
               
             </a>
             <a data-lag=".15" href="/resume-of-shuvo.pdf" download="" target="_blank" class="link-btn resume magnetic">
-              <span class="text">Downdload Resume</span>
+              <span class="text">Download Resume</span>
               <svg class="icon"  width="167" height="167" viewBox="0 0 167 167" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M131.584 37.9976L37.6783 131.903" stroke="black" stroke-width="12"/>
                 <path d="M58.7941 36.4067L131.915 38.3282L130.468 108.081" stroke="black" stroke-width="12"/>
